--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -1,17 +1,18 @@
 <head>
-    <title>Questiosn</title>
+    <title>Questions</title>
 </head>
 <body>
     <h1>Questions</h1>
-    <% for (var i=0; i < data.length ; i++) { %>     
-        <h3><%- data[i].text %></h3>
-        <small><%- data[i].time %></small>
+    <% for (let i=0; i < data.length ; i++) { %>     
+        <h3><%= data[i].text %></h3>
+        <small><%= data[i].time %></small>
         <h4>Replies</h4>
-        <% for (const reply in data[i].replies) { %>
-            <div><%- reply.text %></div>
+        <% for (let j=0; j < data[i]["replies"].length; j++) { %>
+            <div><%= data[i]["replies"][j].text %></div>
         <% } %>  
         <form action="/reply" method="POST">
-            <input type="text" name="<%= data[i].questionId %>">
+            <input type="text" name="text">
+            <input type="hidden" name="questionId" value="<%= data[i].questionId %>">
             <input type="submit" value="Reply">
         </form>
     <% } %>
