--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,259 +2,77 @@
 <html>
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="frame4.css">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <!--Sign in with Google-->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    
     <script src="location.js"></script>
     <script src="signin.js"></script>
     <script src="jwt-decode.js"></script>
     <script src="script.js"></script>
     <meta name="google-signin-client_id" content="859550291312-jmcarebfcc8hrqkq4c1p7t5qt5cj7l5f.apps.googleusercontent.com">
-    <title>rellit</title>
-
-
+    <title>Rellit</title>
 </head>
 <body>
-    <div style ="
-    display:grid;
-    grid-template-columns: 2fr 7fr;
-    column-gap: 5px;
-    height:100%;
-    ">
-
-    <div class="left">
-        <div class="s_box">
-            
-            <div class="close_bar">
-            
-                <span class="close">&times;</span>
-            </div>
-
-            
-            <div class="settings_box">
-            
-                <button class="buttons_s">Account Settings</button>
-                <button class="buttons_s">Friends</button>
-                <button class="buttons_s">About/FAQ's</button>
-                <button class="buttons_s">Log in / Log out</button>
-
-            </div>
+    <h1 class="text-center">Welcome to Rellit!</h1>
+    <div class="dropdown show">
+        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Menu
+        </a>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item" href="#">About/FAQ's</a>
+          <a class="dropdown-item" href="#">Account Settings</a>
+          <a class="dropdown-item" href="#">Friends</a>
         </div>
-    <div class="map">
-
-        MAP
     </div>
-    
+    <div class="google-auth">
+        <div id="g_id_onload"
+            data-client_id="859550291312-jmcarebfcc8hrqkq4c1p7t5qt5cj7l5f.apps.googleusercontent.com"
+            data-context="signin"
+            data-ux_mode="popup"
+            data-callback="handleCredentialResponse"
+            style="position: absolute; top: 100px; right: 30px;
+            width: 0; height: 0; z-index: 1001;">
+        </div>
+        <div class="g_id_signin"
+            data-type="standard"
+            data-shape="rectangular"
+            data-theme="outline"
+            data-text="sign_in_with"
+            data-size="large"
+            data-logo_alignment="left"
+            data-width=200>
+        </div>
     </div>
-    <div >
-    <div style ="margin:1px;
-                    display: flex;
-                    flex-direction:row;
-                    height: 37px;" >
-
-            <div style="background-color: white;
-                        width:38px;
-                        padding: 1px;
-                        margin: 1px;
-                        padding-bottom:2px;
-                        margin-bottom: 1px;
-                        cursor: pointer;">
-
-                <div class="menu_bar"></div>
-                <div class="menu_bar"></div>
-                <div class="menu_bar"></div>
-
-            </div>
-            <div style = "flex: 1;
-                    background-color: white;">
-                <p style="text-align: centre;
-                        font-family: serif;
-                        font-weight:bold;
-                        text-align:center;
-                        line-height:10px;
-                            color:black">WELCOME TO RELLIT</p>
+    <div class="text-center" class="btn-group btn-group-toggle" data-toggle="buttons">
+        <label class="btn btn-secondary active">
+            <input type="radio" name="options" id="option1" autocomplete="off" checked>Ask a Question
+        </label>
+        <label class="btn btn-secondary">
+            <input type="radio" name="options" id="option2" autocomplete="off">Meet People
+        </label>
+    </div>
+    <div class="container">
+        <div class="row">
+          <div class="col-sm p-3 mb-2 bg-secondary text-white">
+            MAP
+          </div>
+          <div class="col-sm p-3 mb-2 bg-info text-dark">
+            <form>
+                <div class="form-group" method="POST" action="/new-question">
+                    <label for="formGroupExampleInput">What are you curious about?</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput">
+                    <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
-    
-    </div>
-
-    <div style ="display:grid;
-                    grid-template-columns:4fr 3fr;
-                    column-gap: 5px;
-                    height:100%;">
-
-                    <div class="middle">
-                    <div style ="margin:1px;
-                        display: flex;
-                        flex-direction:row;
-                        height: 45px;
-                        background-color:white;
-                        border:none;
-                        border-color:white;
-                        " >
-                    
-                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                            <label class="btn btn-secondary active">
-                              <input type="radio" name="options" id="option1" autocomplete="off" checked> Questions
-                            </label>
-                            <label class="btn btn-secondary">
-                              <input type="radio" name="options" id="option2" autocomplete="off"> MeetUp
-                            </label>
-                        </div>
-        
-                    </div>
-        
-                    <div style="background-color: orange;
-                    margin:0;
-                    padding:2px;
-                    width:100%;
-                    height:100%;
-                    ">
-        
-                        <div style="
-                        
-                        
-                        height:40px;
-                        padding-bottom: 2%;
-                        padding-top: 2%;
-                        padding-left:10%;
-                        padding-right:10%;
-                        width:80%;"
-                        >
-        
-                        <br>
-                        <form method="POST" action="/new-question">
-                            <label>What are you curious about?</label>
-                            <input type="text" name="question" />
-                            <br/>
-                            <button>Submit</button>
-                        </form>
-                        <form>
-                            <div class="form-group">
-                              <label for="exampleInputEmail1">Email address</label>
-                              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                            </div>
-                            <div class="form-group">
-                              <label for="exampleInputPassword1">Password</label>
-                              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                            </div>
-                            <div class="form-check">
-                              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                              <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
-                        </form>
-                        </div> 
-                        
-                        <div class="question_box" >
-        
-                            <p class="post_info">
-                                Username 1hr ago
-        
-                            </p>
-        
-                            <p class="post_content">
-        
-                                Why is there a big crowd in front of comfort inn hotel?
-                            </p>
-        
-        
-        
-                        </div>
-        
-                        <div class="question_box" >
-        
-                            <p class="post_info">
-                                Username 2hr ago
-        
-                            </p>
-        
-                            <p class="post_content">
-        
-                                How crowded is the beach this afternoon
-                            </p>
-        
-        
-        
-                        </div>
-                </div>
+            </form>
+          </div>
+          <div class="col-sm p-3 mb-2 bg-secondary text-white">
+            CHAT
+          </div>
         </div>
+      </div>
 
-        <div class="right">
-
-            <div style="background-color: white;
-            color:black;
-            border:none;
-            text-align:center;
-            height:45px;">
-            
-            Chat:
-
-
-            </div>
-
-            <div style="border:none;
-            background-color:rgb(189, 188, 188);
-            color:black;
-            margin:0px;
-            height:40px;
-            padding-bottom: 2%;
-            padding-top: 2%;
-            padding-left:10%;
-            padding-right:10%;
-            width:80%;;
-            overflow:auto;"
-            >
-            Question: Why is there a big crows in front of comfort inn hotel?
-        
-            </div>
-            <div class="question_box" >
-
-                <p class="post_info">
-                    Username 5 min ago
-
-                </p>
-
-                <p class="post_content">
-
-                    Yeah, its Logan Paul
-                </p>
-
-
-
-            </div>
-
-            <div class="question_box" >
-
-                <p class="post_info">
-                    Username 10 min ago
-
-                </p>
-
-                <p class="post_content">
-
-                    Probably some celebrity
-                </p>
-
-
-
-            </div>
-        </div>
-
-
-
-
-
-    </div>
-    
-
-
-    </div>
-</div>
+      <!--
     <div id="custom-greeting"></div>
     <div>
         <a href="https://github.com/qingyuan-wu/rellit" target="_blank">Link</a> To our project's GitHub repository
@@ -262,32 +80,7 @@
     <br>
     <div id="top-bar">
         <span><a href="/questions">Questions</a></span>
-        <p id="google-auth">
-
-            <div id="g_id_onload"
-                data-client_id="859550291312-jmcarebfcc8hrqkq4c1p7t5qt5cj7l5f.apps.googleusercontent.com"
-                data-context="signin"
-                data-ux_mode="popup"
-                data-callback="handleCredentialResponse">
-            </div>
-
-            <div class="g_id_signin"
-                data-type="standard"
-                data-shape="pill"
-                data-theme="outline"
-                data-text="signin"
-                data-size="large"
-                data-logo_alignment="left">
-            </div>
-        </p>
     </div>
-
-    <p id="location">
-        <button onclick="getCoordinates()">Click to get coordinates</button>
-        <p id="location-container"></p>
-    </p>
-    
-    <!--MeetUp-->
     <br>
     <form method="POST" action="/new-meetup">
         <label>What would you like to do?</label>
@@ -295,8 +88,6 @@
         <br/>
         <button>Submit</button>
     </form>
-
-    <!--Chat-->
     <br>
     <form method="POST" action="/new-reply">
         <label>(using this to test the responses in the chat):</label>
@@ -304,8 +95,6 @@
         <br/>
         <button>Submit</button>
     </form>
-
-    <ul id="response-list"></ul>
-    
+    -->
 </body>
 </html>
