--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,7 +82,7 @@
         </div>
     </div>
 
-    <!--Questions-->
+    <!--
     <br>
     <form method="POST" action="/new-question">
         <label>What are you curious about?</label>
@@ -90,8 +90,6 @@
         <br/>
         <button>Submit</button>
     </form>
-    
-    <!--MeetUp-->
     <br>
     <form method="POST" action="/new-meetup">
         <label>What would you like to do?</label>
@@ -106,10 +104,10 @@
         <br/>
         <button>Submit</button>
     </form>
-
-    <div>
+    <footer>
         <a href="https://github.com/qingyuan-wu/rellit" target="_blank">Link</a> To our project's GitHub repository
-    </div>
+    </footer>
+    -->
     
 </body>
 </html>
