--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,11 @@
             position: sticky;
             top: 30px;
         }
+        .question-container {
+            margin-top: 20px;
+            border: 3px solid black;
+            padding:0;
+        }
         #chat-title {
             position: sticky;
             top: 0;
@@ -39,6 +44,14 @@
             const elementToShow = document.getElementById(questionId);
             elementToShow.style.display = "block";
         }
+        document.addEventListener("DOMContentLoaded", function () {
+            const urlParams = new URLSearchParams(window.location.search);
+            const displayQuestion = urlParams.get('question');
+            if (displayQuestion !== null) {
+                displayResponses(displayQuestion);
+            }
+        });
+            
     </script>
     <div class="container mt-5">
         <div class="row">
@@ -100,9 +113,9 @@
                   </div>
               </form>
               <% for (let i=0; i < data.length; i++) { %>
-                <div style="cursor: pointer;" onclick="displayResponses('<%= data[i].questionId %>')">
+                <div class="question-container" style="cursor: pointer;" onclick="displayResponses('<%= data[i].questionId %>')">
                     <h3><%= data[i].text %></h3>
-                    <small><%= data[i].time %></small>
+                    <small><%= data[i].time.toString().slice(0, 24) %></small>
                 </div>     
             <% } %>
             </div>
@@ -119,7 +132,7 @@
                         <input type="hidden" name="questionId" value="<%= data[i].questionId %>">
                         <input type="submit" value="Reply">
                     </form>
-                </div>     
+                </div>
             <% } %>
             </div>
           </div>
