--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,13 +20,12 @@
             top: 30px;
         }
         .question-container {
-            margin-top: 20px;
-            border: 3px solid black;
-            padding:0;
-        }
-        .reply {
-            margin-top:15px;
-        }
+	    border-radius: 10px;
+	    background-color: #efefef;
+	    margin: 10px 0px 10px 0px;
+	    padding: 10px;
+        text-align:left
+}
         #chat-title {
             position: sticky;
             top: 0;
@@ -34,6 +33,44 @@
         #ask-question {
             position: sticky;
             top: 0;
+        }
+        body{
+	    font-family: sans-serif;
+	    background: rgb(238,174,202);
+	    background: radial-gradient(circle, rgb(61, 114, 173) 0%, rgb(251, 252, 253) 100%);
+        text-align:center;
+	    font-size: 20px;
+	    font-weight: 700;
+        }
+        button{
+        margin-top: 10px;
+	    color: #ffffff;
+	    width: 100%;
+	    text-align: center;
+	    border: 0px;
+	    border-radius: 10px;
+	    padding: 10px 0px 10px 0px;
+	    font-size: 16px;
+	    outline: 0;
+	    cursor: pointer;
+        }
+        .orange-button{
+	    background-image: linear-gradient(rgb(100, 133, 143), lightskyblue);
+	    box-shadow: 0 4px #43474e05;
+        }
+        .orange-button:hover{
+	    box-shadow: 0 2px #d19c57;
+        }
+        .orange-button:active{
+	    box-shadow: 0 0px #d19c57;
+        }
+        input{
+	    padding: 10px;
+	    border-radius: 10px;
+	    border: 2px solid #cccccc;
+	    width: 10%;
+	    margin-bottom: 10px;
+	    box-sizing:inherit;
         }
     </style>
 </head>
@@ -56,20 +93,64 @@
         });
             
     </script>
-
-    <%- include('partials/header.ejs') %>
     <div class="container mt-5">
+        <div class="row">
+          <div class="col">
+            <div class="dropdown show">
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Menu
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#">About / FAQ's</a>
+                  <a class="dropdown-item" href="#">Account Settings</a>
+                  <a class="dropdown-item" href="#">Friends</a>
+                </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <h1 class="text-center">Welcome to Rellit!</h1>
+            <div class="text-center mt-5" data-toggle="buttons">
+                <label class="btn btn-secondary active">
+                    <input type="radio" name="options" id="option1" autocomplete="off" checked> Ask a Question
+                </label>
+                <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="option2" autocomplete="off"> Meet People
+                </label>
+            </div>
+          </div>
+          <div class="col">
+            <div class="google-auth">
+                <div id="g_id_onload"
+                    data-client_id="859550291312-jmcarebfcc8hrqkq4c1p7t5qt5cj7l5f.apps.googleusercontent.com"
+                    data-context="signin"
+                    data-ux_mode="popup"
+                    data-callback="handleCredentialResponse"
+                    style="position: absolute; top: 100px; right: 30px;
+                    width: 0; height: 0; z-index: 1001;">
+                </div>
+                <div class="g_id_signin"
+                    data-type="standard"
+                    data-shape="rectangular"
+                    data-theme="outline"
+                    data-text="sign_in_with"
+                    data-size="large"
+                    data-logo_alignment="left"
+                    data-width=200>
+                </div>
+            </div>
+          </div>
+          </div>
           <div class="row">
-              
             <div class="col-sm p-3 mb-2 bg-secondary text-white">
               MAP
-              <a href="https://www.godaddy.com/">Go meet</a>
             </div>
-            <div class="col-sm p-3 mb-2 bg-info text-dark">
-              <form method="POST" action="/new-question" class="form-group" id="ask-question">
-                    <label for="formGroupExampleInput">What are you curious about?</label>
-                    <input type="text" name="question" class="form-control" id="formGroupExampleInput">
-                    <input type="submit" class="btn btn-primary" value="Submit">
+            <div class="col-sm p-3 mb-2 text-dark" style="background: radial-gradient(circle, rgb(251, 252, 253)  0%, rgb(61, 114, 173) 100%)">
+              <form>
+                  <div class="form-group" id="ask-question" method="POST" action="/new-question">
+                      <label for="formGroupExampleInput">What are you curious about?</label>
+                      <input type="text" class="form-control" id="formGroupExampleInput">
+                      <button class="orange-button" type="submit" class="btn btn-primary">Submit</button>
+                  </div>
               </form>
               <% for (let i=0; i < data.length; i++) { %>
                 <div class="question-container" style="cursor: pointer;" onclick="displayResponses('<%= data[i].questionId %>')">
@@ -79,17 +160,18 @@
             <% } %>
             </div>
             <div id="chat-column" class="col-sm p-3 mb-2 bg-secondary text-white">
-              <div id="chat-title">CHAT</div>
+              <div id="chat-title" style="margin-top:0px"></div>
+              <iframe src="https://salhudais-sps-summer22.appspot.com" style="background-color:skyblue" width="100%" height="25%" title="Chat"></iframe>
               <% for (let i=0; i < data.length ; i++) { %>
                 <div class="hidden" id="<%= data[i].questionId %>">
                     <h4><%= data[i].text %></h4>
                     <% for (let j=0; j < data[i]["replies"].length; j++) { %>
                         <div><%= data[i]["replies"][j].text %></div>
-                    <% } %>  
-                    <form action="/reply" method="POST" class="reply">
-                        <textarea rows="3" name="text" class="form-control" placeholder="Your Thoughts..."></textarea>
+                    <% } %>
+                    <form action="/reply" method="POST">
+                        <input type="text" name="text">
                         <input type="hidden" name="questionId" value="<%= data[i].questionId %>">
-                        <input type="submit" value="Post" class="btn btn-primary">
+                        <input type="submit" value="Reply">
                     </form>
                 </div>
             <% } %>
@@ -97,6 +179,33 @@
           </div>
         </div>
     </div>
+
+    <!--
+    <br>
+    <form method="POST" action="/new-question">
+        <label>What are you curious about?</label>
+        <input type="text" name="question">
+        <br/>
+        <button>Submit</button>
+    </form>
+    <br>
+    <form method="POST" action="/new-meetup">
+        <label>What would you like to do?</label>
+        <input type="text" name="meetup">
+        <br/>
+        <button>Submit</button>
+    </form>
+    <br>
+    <form method="POST" action="/new-reply">
+        <label>(using this to test the responses in the chat):</label>
+        <input type="text" name="reply" />
+        <br/>
+        <button>Submit</button>
+    </form>
+    <footer>
+        <a href="https://github.com/qingyuan-wu/rellit" target="_blank">Link</a> To our project's GitHub repository
+    </footer>
+    -->
     
 </body>
 </html>
