--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,16 @@
 <html>
 <head>
  <title>Rellit</title>
+ <style>
+    body {
+        font-family: sans-serif;
+        background-color: rgb(238,174,202);
+        background: radial-gradient(circle, rgb(61, 114, 173) 0%, rgb(251, 252, 253) 100%);
+        text-align:center;
+        font-size: 20px;
+        font-weight: 700;
+    }
+ </style>
 </head>
     <body>
         <div class="container mt-5">
@@ -20,16 +30,6 @@
                 </div>
                 <div class="col-6">
                   <h1 class="text-center">Welcome to Rellit!</h1>
-                  <!-- <div class="text-center mt-5" data-toggle="buttons">
-                      <label class="btn btn-secondary active">
-                          <input type="radio" name="options" id="option1" autocomplete="off" checked> Ask a Question
-                      </label>
-                      <label class="btn btn-secondary">
-                          <form action="/meet" method="GET">
-                              <input type="radio" name="options" id="option2" autocomplete="off"> Meet People
-                          </form>
-                      </label>
-                  </div> -->
                   <div class="text-center mt-5">
                       <a class="btn btn-secondary" href="/">Ask a Question</a>
                       <a class="btn btn-secondary" href="/meet">Meet People</a>
