Install express-sessions package, and implement basic page refresh count to make sure it is set up correctly.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -127,6 +127,9 @@
         });      
     </script>
 
+    <!--TESTING-->
+    <p>You have visited this page <%= viewCount %> times</p>
+
     <%- include('partials/header.ejs') %>
     <div class="container mt-5">
           <div class="row">
