In Progress: start session when post is made to /login and display that the session is active.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -127,8 +127,7 @@
         });      
     </script>
 
-    <!--TESTING-->
-    <p>You have visited this page <%= viewCount %> times</p>
+    <p>Session Stuff:<%= sessionStuff %></p>
 
     <%- include('partials/header.ejs') %>
     <div class="container mt-5">
