--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
     <meta name="google-signin-client_id" content="859550291312-jmcarebfcc8hrqkq4c1p7t5qt5cj7l5f.apps.googleusercontent.com">
     <title>Rellit</title>
 </head>
-<body>
+<body style="background-color: antiquewhite;">
     <script>
         function test() {
             const chat = document.getElementById('chat-title');
@@ -24,57 +24,93 @@
         }
     </script>
     <div class="container mt-5">
-        <div class="row">
-          <div class="col">
-            <div class="dropdown show">
-                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Menu
-                </a>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                  <a class="dropdown-item" href="#">About / FAQ's</a>
-                  <a class="dropdown-item" href="#">Account Settings</a>
-                  <a class="dropdown-item" href="#">Friends</a>
-                </div>
-            </div>
-          </div>
-          <div class="col-6">
-            <h1 class="text-center">Welcome to Rellit!</h1>
-            <div class="text-center mt-5" data-toggle="buttons">
-                <label class="btn btn-secondary active">
-                    <input type="radio" name="options" id="option1" autocomplete="off" checked> Ask a Question
-                </label>
-                <label class="btn btn-secondary">
-                    <input type="radio" name="options" id="option2" autocomplete="off"> Meet People
-                </label>
-            </div>
-          </div>
-          <div class="col">
-            <div class="google-auth">
-                <div id="g_id_onload"
-                    data-client_id="859550291312-jmcarebfcc8hrqkq4c1p7t5qt5cj7l5f.apps.googleusercontent.com"
-                    data-context="signin"
-                    data-ux_mode="popup"
-                    data-callback="handleCredentialResponse"
-                    style="position: absolute; top: 100px; right: 30px;
-                    width: 0; height: 0; z-index: 1001;">
-                </div>
-                <div class="g_id_signin"
-                    data-type="standard"
-                    data-shape="rectangular"
-                    data-theme="outline"
-                    data-text="sign_in_with"
-                    data-size="large"
-                    data-logo_alignment="left"
-                    data-width=200>
-                </div>
-            </div>
-          </div>
-          </div>
-          <div class="row">
-            <div class="col-sm p-3 mb-2 bg-secondary text-white">
+
+        <div class="container justify-content-between mb-3 mt-1">
+
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
+                <div class="dropdown show">
+                    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Menu
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                      <a class="dropdown-item" href="#">About / FAQ's</a>
+                      <a class="dropdown-item" href="#">Account Settings</a>
+                      <a class="dropdown-item" href="#">Friends</a>
+                    </div>
+                </div> 
+                
+                <h1 class="text-center text-white mx-5 " style="font-size:2vw;" >Welcome to Rellit!</h1>
+
+                <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon text-primary"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                      <li class="nav-item active m-2">
+
+                        <label class="btn btn-secondary active">
+                            <input type="radio" name="options" id="option1" autocomplete="off" checked> Ask a Question
+                        </label>
+                       
+                        
+                      </li>
+      
+                      <li class="nav-item active m-2 ">
+
+                            <label class="btn btn-secondary">
+                                <input type="radio" name="options" id="option2" autocomplete="off"> Meet People
+                            </label>
+                          
+                        </li>
+
+                        <li class="nav-item active m-2 ">
+
+                            <div class="google-auth">
+                                <div id="g_id_onload"
+                                    data-client_id="859550291312-jmcarebfcc8hrqkq4c1p7t5qt5cj7l5f.apps.googleusercontent.com"
+                                    data-context="signin"
+                                    data-ux_mode="popup"
+                                    data-callback="handleCredentialResponse"
+                                    style="position: absolute; top: 100px; right: 30px;
+                                    width: 0; height: 0; z-index: 1001;">
+                                </div>
+                                <div class="g_id_signin"
+                                    data-type="standard"
+                                    data-shape="rectangular"
+                                    data-theme="outline"
+                                    data-text="sign_in_with"
+                                    data-size="large"
+                                    data-logo_alignment="left"
+                                    data-width=200>
+                                </div>
+                            </div>
+                          
+                        </li>
+                      
+                      
+                      
+                    </ul>
+                    
+                  </div>
+
+                
+
+
+            </nav>
+
+
+
+
+
+
+        </div>
+        
+          <div class="row gx-3">
+            <div class=" d-none d-lg-block col-sm mx-2 p-3 mb-2 bg-secondary text-white">
               MAP
             </div>
-            <div class="col-sm p-3 mb-2 bg-info text-dark">
+            <div class="col-sm mx-2 p-3 mb-2 bg-secondary text-white">
               <form>
                   <div class="form-group" method="POST" action="/new-question">
                       <label for="formGroupExampleInput">What are you curious about?</label>
@@ -89,7 +125,7 @@
                 </div>     
             <% } %>
             </div>
-            <div id="chat-column" class="col-sm p-3 mb-2 bg-secondary text-white">
+            <div id="chat-column" class="col-sm mx-2 p-3 mb-2 bg-secondary text-white">
               <div id="chat-title">CHAT</div>
             </div>
           </div>
