--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -43,7 +43,8 @@
                           data-ux_mode="popup"
                           data-callback="handleCredentialResponse"
                           style="position: absolute; top: 100px; right: 30px;
-                          width: 0; height: 0; z-index: 1001;">
+                          width: 0; height: 0; z-index: 1001;"
+                          action="/start-session">
                       </div>
                       <div class="g_id_signin"
                           data-type="standard"
@@ -55,6 +56,7 @@
                           data-width=200>
                       </div>
                   </div>
+                  <p><%= sessionStuff %></p>
                 </div>
               </div>
         </div>
