Start a session when the user logs in and send them to the questions page.

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -41,10 +41,9 @@
                           data-client_id="859550291312-jmcarebfcc8hrqkq4c1p7t5qt5cj7l5f.apps.googleusercontent.com"
                           data-context="signin"
                           data-ux_mode="popup"
-                          data-callback="handleCredentialResponse"
+                          data-login_uri="https://summer22-sps-52.appspot.com/start-session"
                           style="position: absolute; top: 100px; right: 30px;
-                          width: 0; height: 0; z-index: 1001;"
-                          action="/start-session">
+                          width: 0; height: 0; z-index: 1001;">
                       </div>
                       <div class="g_id_signin"
                           data-type="standard"
