--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -41,7 +41,7 @@
                           data-client_id="859550291312-jmcarebfcc8hrqkq4c1p7t5qt5cj7l5f.apps.googleusercontent.com"
                           data-context="signin"
                           data-ux_mode="popup"
-                          data-login_uri="https://summer22-sps-52.appspot.com/start-session"
+                          data-callback="handleCredentialResponse"
                           style="position: absolute; top: 100px; right: 30px;
                           width: 0; height: 0; z-index: 1001;">
                       </div>
