--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,7 +71,7 @@
             font-weight: 700;
         }
         button{
-            margin-top: 10px;
+            /* margin-top: 10px;
             color: #ffffff;
             width: 100%;
             text-align: center;
@@ -80,10 +80,10 @@
             padding: 10px 0px 10px 0px;
             font-size: 16px;
             outline: 0;
-            cursor: pointer;
+            cursor: pointer; */
         }
         .orange-button{
-            background-image: linear-gradient(rgb(100, 133, 143), lightskyblue);
+            background-color: linear-gradient(rgb(100, 133, 143), lightskyblue);
             box-shadow: 0 4px #43474e05;
         }
         .orange-button:hover{
@@ -130,10 +130,10 @@
     <%- include('partials/header.ejs') %>
     <div class="container mt-5">
           <div class="row">
-            <div class="col-sm p-3 mb-2 bg-secondary text-white">
+            <div class="d-none d-lg-block col-sm mx-2 p-3 mb-2 bg-secondary text-white">
               MAP
             </div>
-            <div class="column-2 col-sm p-3 mb-2 text-dark" style="background: radial-gradient(circle, rgb(251, 252, 253)  0%, rgb(61, 114, 173) 100%)">
+            <div class="col-sm mx-2 p-3 mb-23 mb-2 text-dark" style="background: radial-gradient(circle, rgb(251, 252, 253)  0%, rgb(61, 114, 173) 100%)">
               <form method="POST" action="/new-question" class="form-group" id="ask-question">
                     <label for="formGroupExampleInput">What are you curious about?</label>
                     <input type="text" name="question" class="form-control" id="formGroupExampleInput">
@@ -147,7 +147,7 @@
                 </div>     
             <% } %>
             </div>
-            <div id="replies-column" class="col-sm p-3 mb-2 bg-secondary text-white">
+            <div id="replies-column" class="col-sm mx-2 pvs-3 mb-2 bg-secondary text-white">
               <div id="chat-title">Replies</div>
               <% for (let i=0; i < data.length ; i++) { %>
                 <div class="hidden replies-container" id="replies-for-<%= data[i].questionId %>">
