add favicon to deployment

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -40,7 +40,7 @@
                       <div id="g_id_onload"
                           data-client_id="859550291312-jmcarebfcc8hrqkq4c1p7t5qt5cj7l5f.apps.googleusercontent.com"
                           data-context="signin"
-                          data-ux_mode="popup"
+                          data-auto_prompt="false"
                           data-callback="handleCredentialResponse"
                           style="position: absolute; top: 100px; right: 30px;
                           width: 0; height: 0; z-index: 1001;">
@@ -49,7 +49,7 @@
                           data-type="standard"
                           data-shape="rectangular"
                           data-theme="outline"
-                          data-text="sign_in_with"
+
                           data-size="large"
                           data-logo_alignment="left"
                           data-width=200>
