Adjust the width, align the layout.

--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -10,12 +10,21 @@
     <%- include('partials/header.ejs') %>
 
     <br>
-    <section>
+    <section class="mx-auto" style="width: 1100px">
         <h1 class="text-center mb-4 pb-2 text-light fw-bold">FAQ</h1>
-      
+
         <div class="row">
+            <div class="col-md-6 col-lg-4 mb-4">
+                <h3 class="mb-3 text-primary"><i class="fas text-primary pe-2"></i> 
+                What's the difference between Rellit and Reddit?</h3>
+                <p>
+                    A feed of questions and chats based specifically on your location rather than a subreddit
+                    is the defining distinction. 
+                </p>
+            </div>
+            
           <div class="col-md-6 col-lg-4 mb-4">
-            <h3 class="mb-3 text-primary"><i class="far fa-paper-plane text-primary pe-2"></i> What is Rellit?</h3>
+            <h3 class="mb-3 text-light"><i class="far text-primary pe-2"></i> What is Rellit?</h3>
             <p>
                 Rellit is a real-time chat website that connects you with people based on your location. Some of the key 
                 functionalities include a feed of questions that are exclusively relevant to your 
@@ -27,16 +36,7 @@
           </div>
       
           <div class="col-md-6 col-lg-4 mb-4">
-            <h3 class="mb-3 text-light"><i class="fas fa-pen-alt text-primary pe-2"></i> 
-            What's the difference between Rellit and Reddit?</h3>
-            <p>
-                A feed of questions and chats based specifically on your location rather than a subreddit
-                is the defining distinction. 
-            </p>
-          </div>
-      
-          <div class="col-md-6 col-lg-4 mb-4">
-            <h3 class="mb-3 text-primary"><i class="fas fa-user text-primary pe-2"></i> 
+            <h3 class="mb-3 text-primary"><i class="fas text-primary pe-2"></i> 
                 Why is Rellit asking to use my location?
             </h3>
             <p>
@@ -46,7 +46,7 @@
           </div>
       
           <div class="col-md-6 col-lg-4 mb-4">
-            <h3 class="mb-3 text-primary"><i class="fas fa-rocket text-primary pe-2"></i> 
+            <h3 class="mb-3 text-primary"><i class="fas text-primary pe-2"></i> 
                 Why is the chat separate from the questions page?
             </h3>
             <p>
@@ -57,7 +57,7 @@
           </div>
       
           <div class="col-md-6 col-lg-4 mb-4">
-            <h3 class="mb-3 text-light"><i class="fas fa-home text-primary pe-2"></i> 
+            <h3 class="mb-3 text-light"><i class="fas text-primary pe-2"></i> 
                 Will other users be able to see my location or any other personal information?
             </h3>
             <p><strong><u>No</u>.</strong> Rellit prides itself in complete anonymity, convenience, and assurance.
@@ -65,7 +65,7 @@
           </div>
       
           <div class="col-md-6 col-lg-4 mb-4">
-            <h3 class="mb-3 text-primary"><i class="fas fa-book-open text-primary pe-2"></i> 
+            <h3 class="mb-3 text-primary"><i class="fas text-primary pe-2"></i> 
             Do I have to sign in with Google to use Rellit?</h3>
             <p>
                 Yes, we do require users to sign in with their Google accounts to ensure that your information 
