Center buttons under nav bar, Remove background color from nav section.

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,12 +33,18 @@
                         data-text="sign_in_with"
                         data-size="large"
                         data-logo_alignment="left"
-                        data-width=200>
+                        data-width=150>
                     </div>
                 </div>
             </nav>
         </div>
-        <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <!--<div class="col-6">-->
+            <div class="text-center mt-5">
+                <a class="btn btn-secondary" href="/">Ask a Question</a>
+                <a class="btn btn-secondary" href="/meet">Meet People</a>
+            </div>
+        <!--</div>-->
+        <!--<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon text-primary"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -50,6 +56,6 @@
                     <a class="btn btn-secondary" href="/meet">Meet People</a>
                 </li>
             </ul>
-        </div>
+        </div>-->
     </body>
 </html>
