--- a/views/index.ejs
+++ b/views/index.ejs
@@ -141,7 +141,7 @@
     <%- include('partials/header.ejs') %>
     <div class="container mt-5">       
           <div class="row">
-            <div class="d-none d-lg-block col-5 mx-2 p-3 mb-2 bg-secondary text-white">
+            <div class="d-none d-lg-block col-5 mx-2 p-3 mb-2">
               MAP
             </div>
             <div class="col-sm mx-2 p-3 mb-23 mb-2 text-dark" style="background: radial-gradient(circle, rgb(251, 252, 253)  0%, rgb(61, 114, 173) 100%)">
