--- a/views/meet.ejs
+++ b/views/meet.ejs
@@ -16,7 +16,7 @@
     <%- include('partials/header.ejs') %>
     <div class="container mt-5">
         <iframe src="https://salhudais-sps-summer22.appspot.com"
-            style="background-color:skyblue"
+            style="background-color:inherit;"
             width="100%"
             height="100%"
             title="Chat"
