--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sorts+Mill+Goudy&display=swap" rel="stylesheet">
     <title>Rellit</title>
+    <style>
+        body{
+            font-family: 'Sorts Mill Goudy', serif;
+        }
+        #navbar{
+            width:100%;
+            
+        }
+    </style>
 </head>
     <body>
-        <div class="container  mb-3 mt-1">
+        <div id="navbar"class="container  mb-2 mt-0 ">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
                 <div class="dropdown show">
                     <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -16,7 +28,7 @@
                       <a class="dropdown-item" href="#">Friends</a>
                     </div>
                 </div> 
-                <h1 class="text-center text-white mx-5 " style="font-size:2vw;" >Welcome to Rellit!</h1>
+                <h1 class="text-center text-white mx-6 " style="font-size:2vw;" >Welcome to Rellit!</h1>
                 <div class="google-auth">
                     <div id="g_id_onload"
                         data-client_id="859550291312-jmcarebfcc8hrqkq4c1p7t5qt5cj7l5f.apps.googleusercontent.com"
@@ -39,7 +51,7 @@
             </nav>
         </div>
         <!--<div class="col-6">-->
-            <div class="text-center mt-5">
+            <div class="text-center mt-4">
                 <a class="btn btn-secondary" href="/">Ask a Question</a>
                 <a class="btn btn-secondary" href="/meet">Meet People</a>
             </div>
