--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sorts+Mill+Goudy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -13,23 +16,26 @@
     <script src="script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>  
     <meta name="google-signin-client_id" content="859550291312-jmcarebfcc8hrqkq4c1p7t5qt5cj7l5f.apps.googleusercontent.com">
 
     <title>Rellit</title>
     <style>
+
+
         .hidden {
             display:none;
             position: sticky;
             top: 30px;
         }
         .replies-container {
-            background-color:rgb(127, 210, 238); 
+            background-color: #a4c3b2;
             border-radius: 5px;
             padding: 10px;
         }
         .question-container {
             border-radius: 10px;
-            background-color: #efefef;
+            background-color: #eaf4f4;
             margin: 10px 0px 10px 0px;
             padding: 10px;
             text-align:left
@@ -61,12 +67,12 @@
             float:right;
         }
         .column-2 {
-            background-color: #5bc0de;
+            background-color: inherit;
         }
         body {
-            font-family: sans-serif;
+            font-family: 'Sorts Mill Goudy', serif;
             background-color: rgb(238,174,202);
-            background: radial-gradient(circle, rgb(61, 114, 173) 0%, rgb(251, 252, 253) 100%);
+            background: white;
             text-align:center;
             font-size: 20px;
             font-weight: 700;
@@ -99,6 +105,9 @@
             border: 2px solid #cccccc;
             margin-bottom: 10px;
             box-sizing: inherit;
+        }
+        #main_question{
+            font-size: 25px;
         }
     </style>
 </head>
@@ -139,14 +148,22 @@
     </script>
 
     <%- include('partials/header.ejs') %>
-    <div class="container mt-5">       
+
+    <div class="spinner-wrapper">
+        <div class="spinner">
+            <div class="cube1"></div>
+            <div class="cube2"></div>
+          </div>
+    </div>
+
+    <div class="container mt-3">       
           <div class="row">
-            <div class="d-none d-lg-block col-5 mx-2 p-3 mb-2">
+            <div class="d-none d-lg-block col-3 mx-6 p-3 mb-2 bg-dark mt-5" style="border-radius:25px;">
               MAP
             </div>
-            <div class="col-sm mx-2 p-3 mb-23 mb-2 text-dark" style="background: radial-gradient(circle, rgb(251, 252, 253)  0%, rgb(61, 114, 173) 100%)">
+            <div class="col-6 mx-2 p-3 mb-23 mb-2 text-dark" style="background: inherit">
               <form method="POST" action="/new-question" class="form-group" id="ask-question">
-                    <label for="formGroupExampleInput">What are you curious about?</label>
+                    <label id="main_question" for="formGroupExampleInput">What are you curious about?</label>
                     <input type="hidden" name="long" id="long_question">
                     <input type="hidden" name="lat" id="lat_question">
                     <input type="text" name="question" class="form-control" id="formGroupExampleInput">
@@ -160,7 +177,7 @@
                 </div>     
             <% } %>
             </div>
-            <div id="replies-column" class="col-sm mx-2 pvs-3 mb-2 bg-secondary text-white">
+            <div id="replies-column" class="col-sm mx-1 mt-5 pvs-5 mb-2 text-black">
               <div id="chat-title">Replies</div>
               <% for (let i=0; i < data.length ; i++) { %>
                 <div class="hidden replies-container" id="replies-for-<%= data[i].questionId %>">
@@ -192,6 +209,16 @@
             return time.toString().slice(0, 21);
         }
     %>
-    
+    <script>
+        $(document).ready(function() {
+        //Preloader
+        preloaderFadeOutTime = 3000;
+        function hidePreloader() {
+        var preloader = $('.spinner-wrapper');
+        preloader.fadeOut(preloaderFadeOutTime);
+        }
+        hidePreloader();
+        });
+        </script>
 </body>
 </html>
