--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,14 @@
 <html>
 <head>
     <title>Rellit</title>
+    <style>
+        #rellit-title {
+            margin:auto;
+        }
+        #dropdownMenuLink {
+            margin-right:100px;
+        }        
+    </style>
 </head>
     <body>
         <div class="container  mb-3 mt-1">
@@ -16,7 +24,7 @@
                       <a class="dropdown-item" href="#">Friends</a>
                     </div>
                 </div> 
-                <h1 class="text-center text-white mx-5 " style="font-size:2vw;" >Welcome to Rellit!</h1>
+                <h1 class="text-white mx-5 " style="font-size:2vw;" id="rellit-title">Rellit</h1>
                 <div class="google-auth">
                     <div id="g_id_onload"
                         data-client_id="859550291312-jmcarebfcc8hrqkq4c1p7t5qt5cj7l5f.apps.googleusercontent.com"
@@ -32,7 +40,7 @@
                         data-text="sign_in_with"
                         data-size="large"
                         data-logo_alignment="left"
-                        data-width=150>
+                        data-width=100>
                     </div>
                 </div>
             </nav>
